--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Build Application JAR
       working-directory: ./18_DockerizingOurApp/rest-with-spring-boot-and-java-erudio
       run: |
-        - pwd
-        - mvn clean package
+        pwd
+        mvn clean package
 
     - name: Docker Compose Build
       working-directory: ./18_DockerizingOurApp
